# linux_cmake_tutorial

./: README.md
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt  demo.cpp
demo3/mylib/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/mylib/: CMakeLists.txt  mymath.cpp
demo4/src/: CMakeLists.txt  demo.cpp
demo5/: CMakeLists.txt
demo5/mylib/: mymath.cpp
demo5/src/: CMakeLists.txt  demo.cpp
demo6/: CMakeLists.txt  test.cpp
demo7/: CMakeLists.txt  launch.json  test.cpp
